{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 56,
  "lineage": "cec38213-332c-e3e4-ce73-8d4762bd89b5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-082856f34411ca2b6",
            "domain": "vpc",
            "id": "eipalloc-07827ee54471354e3",
            "instance": "i-0ab704477e53aa028",
            "network_border_group": "us-east-2",
            "network_interface": "eni-011a92da6589022fa",
            "private_dns": "ip-10-1-1-121.us-east-2.compute.internal",
            "private_ip": "10.1.1.121",
            "public_dns": "ec2-3-13-150-236.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.150.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_instance.summative_ec2",
            "module.vpc.aws_key_pair.region-key-pair",
            "module.vpc.aws_security_group.ssh-allowed",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04709125ac37ca402",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-139-222-103.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.222.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "summative_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf31d971a3ca20d6",
            "arn": "arn:aws:ec2:us-east-2:768824829971:instance/i-0ab704477e53aa028",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab704477e53aa028",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "region-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-011a92da6589022fa",
            "private_dns": "ip-10-1-1-121.us-east-2.compute.internal",
            "private_ip": "10.1.1.121",
            "public_dns": "ec2-3-13-150-236.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.150.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cabd94c3566e5f8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05304cf540daeb645",
            "tags": {
              "Name": "summative_ec2_ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ee4fe6d80b52c151"
            ]
          },
          "dependencies": [
            "module.vpc.aws_key_pair.region-key-pair",
            "module.vpc.aws_security_group.ssh-allowed",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768824829971:internet-gateway/igw-0ce62394a712bd1c7",
            "id": "igw-0ce62394a712bd1c7",
            "owner_id": "768824829971",
            "vpc_id": "vpc-00cd7257e59e73c47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04709125ac37ca402",
            "id": "nat-08bc12f08f21ce468",
            "network_interface_id": "eni-0aedffad8385cf18d",
            "private_ip": "10.1.1.240",
            "public_ip": "3.139.222.103",
            "subnet_id": "subnet-05304cf540daeb645",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip2",
            "module.vpc.aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-005198bb714b83b3e",
            "owner_id": "768824829971",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce62394a712bd1c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-00cd7257e59e73c47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1212a893e8fc817",
            "route_table_id": "rtb-005198bb714b83b3e",
            "subnet_id": "subnet-05304cf540daeb645"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-crt",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ac2c22831780bb4",
            "route_table_id": "rtb-005198bb714b83b3e",
            "subnet_id": "subnet-035813bb3e5371c1a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-crt",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta-public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072bc577be9a34342",
            "route_table_id": "rtb-005198bb714b83b3e",
            "subnet_id": "subnet-05637810d11be20d5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-crt",
            "module.vpc.aws_subnet.public-subnet-3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768824829971:security-group/sg-0ee4fe6d80b52c151",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee4fe6d80b52c151",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20201228111530012800000001",
            "name_prefix": "",
            "owner_id": "768824829971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Summative_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cd7257e59e73c47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768824829971:subnet/subnet-0638c594a421c8775",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0638c594a421c8775",
            "map_public_ip_on_launch": false,
            "owner_id": "768824829971",
            "vpc_id": "vpc-00cd7257e59e73c47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768824829971:subnet/subnet-0075cdb00257ac236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0075cdb00257ac236",
            "map_public_ip_on_launch": false,
            "owner_id": "768824829971",
            "vpc_id": "vpc-00cd7257e59e73c47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768824829971:subnet/subnet-0c90b286ac365533f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-0c90b286ac365533f",
            "map_public_ip_on_launch": false,
            "owner_id": "768824829971",
            "vpc_id": "vpc-00cd7257e59e73c47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768824829971:subnet/subnet-05304cf540daeb645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-05304cf540daeb645",
            "map_public_ip_on_launch": true,
            "owner_id": "768824829971",
            "vpc_id": "vpc-00cd7257e59e73c47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768824829971:subnet/subnet-035813bb3e5371c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-035813bb3e5371c1a",
            "map_public_ip_on_launch": true,
            "owner_id": "768824829971",
            "vpc_id": "vpc-00cd7257e59e73c47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768824829971:subnet/subnet-05637810d11be20d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-05637810d11be20d5",
            "map_public_ip_on_launch": true,
            "owner_id": "768824829971",
            "vpc_id": "vpc-00cd7257e59e73c47"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768824829971:vpc/vpc-00cd7257e59e73c47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08ff51cd853ef69ed",
            "default_route_table_id": "rtb-013424cd517f2062e",
            "default_security_group_id": "sg-0587ab6d99048fcde",
            "dhcp_options_id": "dopt-1186147a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00cd7257e59e73c47",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-013424cd517f2062e",
            "owner_id": "768824829971",
            "tags": {
              "Name": "summative_vpc"
            }
          }
        }
      ]
    }
  ]
}